--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         JEKYLL_VERSION: ${{ matrix.jekyll }}
       run: |
         gem install bundler --no-document
-        bundle install --jobs 4 --local --deployment
+        bundle install --jobs 4 --local
     - name: Run tests
       run: bundle exec rake test
     - name: Run linter
