--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,12 +4,12 @@ on: [push]
 
 jobs:
   build:
+    name: Jekyll
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
       matrix:
         jekyll: [ '~> 3.0', '~> 4.0' ]
-    name: Jekyll ${{ matrix.jekll }}
     steps:
     - uses: actions/checkout@master
     - name: Cache Ruby Gems
