--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        jekyll: [ '~> 3.0', '~> 4.0' ]
+        jekyll: [ '3.0', '4.0' ]
     steps:
     - uses: actions/checkout@master
     - name: Cache Ruby Gems
@@ -25,7 +25,7 @@ jobs:
         ruby-version: 2.6
     - name: Install Dependencies
       env:
-        JEKYLL_VERSION: ${{ matrix.jekyll }}
+        JEKYLL_VERSION: ~> ${{ matrix.jekyll }}
       run: |
         gem install bundler --no-document
         bundle install --jobs 4
