--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
         JEKYLL_VERSION: ~> ${{ matrix.jekyll }}
       run: |
         gem install bundler --no-document
+        bundle config path vendor/bundle
         bundle install --jobs 4
     - name: Run tests
       run: bundle exec rake test
